# chess-lab

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-tests.yml
crates/fen-macro/src/: lib.rs
data/: ex1.pgn  ex2.pgn  ex3.pgn
data/chess960/: ex.pgn  ex1.pgn  ex2.pgn
data/standard/: ex.pgn
data/three_check/: ex1.pgn  ex2.pgn
fen-macro/: Cargo.toml
src/: lib.rs
src/common/: mod.rs
src/common/constants/: game.rs  mod.rs  movements.rs  pgn.rs  position.rs  variant.rs
src/common/errors/: board.rs  chess960.rs  fen.rs  mod.rs  movements.rs  pgn.rs  position.rs  square.rs
src/common/utils/: mod.rs  movements.rs  os.rs
src/common/utils/os/: file_handler.rs  mod.rs
src/common/utils/pest/: mod.rs  pgn.pest  pgn_parser.rs
src/config/constants/: game.rs  mod.rs  movements.rs  position.rs
src/core/: chess_move.rs  color.rs  game_status.rs  mod.rs  pgn_tree.rs  piece.rs  position.rs  square.rs  variant.rs
src/logic/: board.rs  game.rs  mod.rs  pieces.rs
src/parsing/: mod.rs
src/parsing/fen/: mod.rs
src/parsing/pgn/: mod.rs  pgn.pest
src/variants/: chess960.rs  mod.rs  standard.rs  three_check.rs
