[package]
name = "chess-lab"
version = "0.1.1"
edition = "2021"
description = "Chess library with multiple variants and FEN/PGN support."
authors = ["Santicm23 <santicastrom@outlook.com>"]
license = "CC0-1.0"

homepage = "https://github.com/Santicm23/chess-lab"
repository = "https://github.com/Santicm23/chess-lab"
documentation = "https://docs.rs/chess-lab"
readme = "README.md"
keywords = ["chess", "variants", "fen", "pgn", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
pest = "2.1"
pest_derive = "2.1"
